# csvs

./: .gitignore  Cargo.toml  LICENSE  README.md  build-linux.Dockerfile  build-linux.sh  build-mac.sh  build-win.cmd  build.md  command_options.md  decide_data_type.md  error_handling.md  interactive_mode.md  regexp.md  validating_number.md  vhs_gen.sh
.github/workflows/: ci.yml  release.yml  test.yaml
assets/: interactive.tape  interactive2.tape  usage.tape
src/: app.rs  args.rs  args_util.rs  csv.rs  db.rs  format.rs  help.rs  logger.rs  main.rs  quote_style.rs  raw_args.rs  sqlite_data_type.rs  tui.rs  util.rs
src/args_util/: args.rs  is_tsv_filename.rs  raw_args.rs  trim.rs
src/csv/: csv_parser.rs  csv_writer.rs
src/db/: add_regexp_function.rs  execute_statements.rs  initialize_database.rs  is_reserved_table_name.rs  list_available_table.rs  sqlite_data_type.rs  sqlite_quoted.rs  statement_result.rs  table_info.rs
src/tui/: component_available_tables.rs  component_message_dialog.rs  component_progress_dialog.rs  component_shortcut_menu.rs  component_sql_input.rs  component_sql_result.rs  component_sql_result_filename_input_dialog.rs  component_sql_result_info.rs  component_table_info_dialog.rs  database_event_listener.rs  database_event_listener_available_tables_update.rs  database_event_listener_sql_result_by_page.rs  database_event_listener_sql_result_by_query.rs  database_event_listener_sql_result_save_file.rs  database_event_listener_table_info.rs  event_listener.rs  input_history.rs  tui_id.rs  tui_main.rs  tui_model.rs  tui_model_available_tables_info.rs  tui_model_available_tables_selected.rs  tui_model_is_dialog_displayed.rs  tui_model_message_dialog.rs  tui_model_move_input_focus.rs  tui_model_progress_dialog.rs  tui_model_shortcut_menu_update.rs  tui_model_sql_input_append_value.rs  tui_model_sql_input_history.rs  tui_model_sql_input_value.rs  tui_model_sql_result_filename_input_dialog.rs  tui_model_table_info_column_selected.rs  tui_model_table_info_dialog.rs  tui_model_ui_elements_darken.rs  tui_model_update_sql_result_info.rs  tui_model_which_component_focused.rs  tui_msg.rs  tui_user_event.rs  user_event_port.rs
src/util/: is_tsv_filename.rs
