[package]
authors = ["Masanori KOMAGAMINE"]
categories = ["command-line-utilities"]
description = "csvs (CSV Sql) is a command-line tool that simplifies working with CSV or TSV files by enabling SQL queries through an embedded SQLite engine."
edition = "2024"
homepage = "https://github.com/koma-private/csvs"
include = ["assets/**/*", "src/**/*", "LICENSE", "*.md"]
keywords = ["csv", "tsv", "sql", "cli", "parser"]
license = "MIT"
name = "csvs"
readme = "README.md"
repository = "https://github.com/koma-private/csvs"
version = "1.2.0"

[features]
default = []

[dependencies]
anyhow = { version = "1.0.97" }
chardetng = { version = "0.1.17" }
clap = { version = "4.5.35", features = ["derive"] }
clap-help = { version = "1.3.2" }
csv = { version = "1.3.1" }
encoding_rs = { version = "0.8.35", features = ["fast-legacy-encode"] }
encoding_rs_rw = { version = "0.4.2" }
indicatif = { version = "0.17.11" }
lazy-regex = { version = "3.4.1" }
r2d2 = { version = "0.8.10" }
r2d2_sqlite = { version = "0.27.0" }
rusqlite = { version = "0.34.0", features = ["bundled", "functions", "modern_sqlite"] }
smashquote = { version = "0.1.2" }
sqlparser = { version = "0.55.0" }
tracing = { version = "0.1.41" }
tracing-logfmt = { version = "0.3.5" }
tracing-subscriber = { version = "0.3.19" }
tui-realm-stdlib = { version = "2.0.1" }
tui-realm-textarea = { version = "2.1.0", features = ["clipboard"] }
tuirealm = { version = "2.1.0" }

[profile.release]
strip = true
lto = true

# see https://users.rust-lang.org/t/how-to-share-external-packages-between-projects/94324/4
[profile.dev]
debug = 1 # less precise locations

[profile.dev.package."*"]
debug = false # no debug symbols for deps
opt-level = 2 # this makes their code smaller too
